tests/specs/ecosystem/codehz/mtproto/0_6_0.test
codehz/mtproto/0.6.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Closer'.
export interface Transport extends Deno.Closer {
                                        ~~~~~~
    at file://<tmpdir>/types.ts:13:41

